--- a/pages/propos.html
+++ b/pages/propos.html
@@ -8,7 +8,7 @@
    </head>
    <body>
 		<header>
-			<a href = "../index.html">
+			<a id = "logoContainer" href = "../index.html">
 					<img id = "logo" src="../images/image0.jpg" alt="logo de ZenkaSerenity"/> 
 				</a>
 			<h1 id = "mainTitle">Trouver votre hébergement à Saint-Quentin au meilleur prix</h1>
