changement du contenu

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -30,9 +30,9 @@
 					<h1 id = "titre">Contacts</h1>
 					<section id="skullSection">
 						<ul>
-							<li>Hôte : Rika</li>
-							<li>E-Mail : </li>
-							<li>Numéro de téléphone : </li>
+							<li>Hôte : Rika Carene</li>
+							<li>E-Mail : delphineimmo023@gmail.com</li>
+							<li>Numéro de téléphone : 06 18 59 24 37</li>
 						</ul> 
 						<ul>
 							<li> Developpeur du site : Jousset Tom </li> 
