--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
    <head>
       <meta name="author" content="jousset" />
-			<title>Page d'acceuil</title>
+			<title>Page d'accueil</title>
 			<link rel="stylesheet" href="./styles/style.css"/>
 			<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
    </head>
