--- a/pages/credits.html
+++ b/pages/credits.html
@@ -2,7 +2,7 @@
 <html lang="fr">
    <head>
       <meta name="author" content="jousset" />
-			<title>Contacts</title>
+			<title>Crédits</title>
 			<link rel="stylesheet" href="../styles/style.css"/>
 			<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
    </head>
