--- a/pages/mentionsLegales.html
+++ b/pages/mentionsLegales.html
@@ -2,7 +2,7 @@
 <html lang="fr">
    <head>
       <meta name="author" content="jousset" />
-			<title>mentions légales</title>
+			<title>Mentions légales</title>
 			<link rel="stylesheet" href="../styles/style.css"/>
 			<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
    </head>
